tests/outref/TJOC01.ref

-- TJOC01 : OCTO291 JOIN queries with invalid ON conditions

select o1.order_id from orders o1 left join orders o2 on o1.customer_id != o3.customer_id left join orders o3 on o2.customer_id = o3.customer_id;

[ERROR] PATH:LINENUM DATE TIME : Unknown column: O3.CUSTOMER_ID
Error with syntax near (line 1, column 76):

select o1.order_id from orders o1 left join orders o2 on o1.customer_id != o3.customer_id left join orders o3 on o2.customer_id = o3.customer_id;
                                                                          ^^^^^^^^^^^^^^
[ERROR] PATH:LINENUM DATE TIME : Error parsing statement: select o1.order_id from orders o1 left join orders o2 on o1.customer_id != o3.customer_id left join orders o3 on o2.customer_id = o3.customer_id;

